# Ai_Applications

./: README.md
applications/A0_simplechat_ui/: README.md  docker-compose.yaml
applications/A11_bash_agent_ollama/: README.md
applications/A11_bash_agent_ollama/bash_agent/: main.py  pyproject.toml
applications/A1_ollama_langchain0/: README.md
applications/A1_ollama_langchain0/example/: main.py  pyproject.toml
applications/A2_youtube_summarizer/: README.md
applications/A2_youtube_summarizer/youtubesummarizer/: main.py  pyproject.toml
applications/A3_knowledge_graph/: README.md
applications/A3_knowledge_graph/example/: knowledge_graph.html  main.py  pyproject.toml
applications/A4_graphrag/: README.md
applications/A5_structured_output_pydantic/: README.md
applications/A5_structured_output_pydantic/example/: main.py  pyproject.toml
applications/A6_knowledge_graph_pydantic/: README.md
applications/A6_knowledge_graph_pydantic/example/: knowledge_graph.html  main.py  pyproject.toml
applications/A6_knowledge_graph_pydantic/example/knowledge_graph/: knowledge_graph.py
applications/A6_knowledge_graph_pydantic/example/vizualization/: vizualization.py
applications/A7_ollama_skills_langchain/: README.md
applications/A7_ollama_skills_langchain/skill_app/: main.py  pyproject.toml  test_skills.py  two_stage_clean.py
applications/A9_ollama_skill_first_arch_langgraph/: README.md
applications/A9_ollama_skill_first_arch_langgraph/doc/: arch.excalidraw
applications/A9_ollama_skill_first_arch_langgraph/skill_app/: main.py  pyproject.toml
(+29 files in other folders)
