[project]
name = "example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.9",
    "langchain-experimental>=0.4.1",
    "langchain-ollama>=1.0.1",
    "llmgraphtransformer>=0.0.2",
    "pyvis>=0.3.2",
]
